spade-tests/src/snapshots/spade_tests__domain_inference__if_expression_mixing_condition_domains.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a bool) -> 'b bool {
    if a {
        true
    } else {
        false
    }
}

error: Mixing signals in different domains
  ┌─ testinput:2:5
  │  
1 │   entity test<'a, 'b>(a: 'a bool) -> 'b bool {
  │                                         ---- This has domain 'b
2 │ ╭     if a {
3 │ │         true
4 │ │     } else {
5 │ │         false
6 │ │     }
  │ ╰─────^ This has domain 'a
