spade-tests/src/snapshots/spade_tests__domain_inference__if_expression_mixing_false_branch_domains.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a bool) -> 'b bool {
    if true {
        true
    } else {
        a
    }
}

error: Mixing signals in different domains
  ┌─ testinput:1:44
  │  
1 │   entity test<'a, 'b>(a: 'a bool) -> 'b bool {
  │                                         ---- This has domain 'b
  │ ╭────────────────────────────────────────────^
2 │ │     if true {
3 │ │         true
4 │ │     } else {
5 │ │         a
6 │ │     }
7 │ │ }
  │ ╰─^ This has domain 'a
