spade-tests/src/snapshots/spade_tests__domain_inference__match_expression_mixing_condition_domains.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a bool) -> 'b bool {
    match a {
        true => true,
        false => false,
    }
}

error: Mixing signals in different domains
  ┌─ testinput:1:44
  │  
1 │   entity test<'a, 'b>(a: 'a bool) -> 'b bool {
  │                                         ---- This has domain 'b
  │ ╭────────────────────────────────────────────^
2 │ │     match a {
3 │ │         true => true,
4 │ │         false => false,
5 │ │     }
6 │ │ }
  │ ╰─^ This has domain 'a
