spade-tests/src/snapshots/spade_tests__domain_inference__mixed_const_domain_array_literal_is_accepted.snap
---
source: spade-tests/src/domain_inference.rs
---
fn test<'a>(a: 'a bool) -> 'a [bool; 2] {
    [a, false]
}
